Fixed in svn version

   * OpenMP crash with PAW
   * Removed lines in iotk that confused some preprocessors
   * More glitches with new xc functionals, compatibility with 
     previous cases: HF, OEP, PZ
   * Variable-cell optimization at fixed volume broke hexagonal symmetry
   * NEB: possible problem in parallel execution (if command-line arguments
     are not available to all processors) avoided by broadcasting arguments
   * PWGui documentation updated to reflect cvs to svn switch
   * Some formats increased to fit printout of large cells
   * PW: the cell volume omega must be positive definite even when the 
     lattice vectors form a left-handed set
   * PW: a bad initialization (of becsum) in the paw spin/orbit case 
     made the convergence more difficult
   * PW: couldn't read any longer data files written by previous versions
   * PHonon: problem with the D_4h group when the matrices of the group 
     are not in the same order as in the routine cubicsym
   * Yet another LDA+CPU+U fix: forces were wrong in spin-polarized case 
   * PW was not stopping anymore when two inconsistent dft were given
   * atomic: default for non-local correlation is set to "   " AND upf%dft 
     is trimmed before being written by write_upf_v2.f90. Therefore older 
     versions of pw will still work if no vdW is present
   * inlc label for vdw-df is set as VDW1, consistently with the comment and 
     needed to avoid matching conflict with VDW2

New in 4.3.1 version:

   * New, improved version of GIPAW (available as a separate package)
   * Effective Screening Medium (Otani and Sugino PRB 73 115407 (2006).
   * CP: faster implementation of LDA+U

Fixed in 4.3.1 version:

   * atomic: behavior of which_augfun='PSQ' made consistent with documentation
   * CP: LDA+U buggy; PLUMED wasn't working
   * Misc compilation and configure problems: line exceeding 132 characters, 
     syntax not accepted by some compilers, pathscale+mpif90 not recognized, 
     etc.